--- a/src/styles/setup/_variables.scss
+++ b/src/styles/setup/_variables.scss
@@ -17,6 +17,7 @@ $color--faint  : #bbbbb4;
 
 $font--serif : (Lora, Georgia, serif);
 $font--sans  : ('Source Sans Pro', Arial, sans-serif);
+$font--mono  : (Inconsolata, monospace, serif);
 
 $width--wrapper   : rem($tick * 20);
 $width--generator : rem($tick * 35);
