--- a/src/templates/generator.html
+++ b/src/templates/generator.html
@@ -22,29 +22,15 @@
           <li><a href="http://instagram.com/ubermost">Instagram</a></li>
         </ul>
         <div class="header__body__info">
-          <p>Create inspiring wallpaper from your favourite lettering! You can download it as a wallpaper for your smartphone and PC, or if you're feeling social&mdash;post it on Facebook, Twitter or Pinterest to share the wisdom with your friends.</p>
+          <p>Create inspiring wallpaper from your favourite lettering! You can download it as a wallpaper for your smartphone and PC, or if you're feeling social&mdash;post it on social network of choice to share the wisdom with your friends.</p>
         </div>
       </div>
     </header>
 
     <main class="main">
       <div class="main__preview">
-        <div class="preview">
-          <img src="//40.media.tumblr.com/9a4b49c8bee12782ed003fecedfd1094/tumblr_nsexw97DJq1upn40oo1_1280.jpg" alt="" class="preview__image">
-          <div class="preview__details">
-            <article class="post">
-              <div class="post__text">
-                <blockquote>
-                  <p>Life doesn’t have to be easy — in fact, the hard stuff is how we achieve anything of value. Life doesn’t have to be comfortable — in fact, when we get out of our comfort zone, we grow. [We] doesn’t have to know what [we’re] doing — it’s when we do things we don’t know how to do that we learn new things, new skills, and get better at them.</p>
-                  <footer>
-                    ― <cite>Leo Babauta, “The One Skill”</cite>
-                  </footer>
-                </blockquote>
-              </div>
-            </article>
-          </div>
-          <span class="loader"></span>
-        </div>
+        <div class="preview" data-source="media/post.json"></div>
+        <span class="loader"></span>
         <section class="overlay">
           <a href="#" class="overlay__close"></a>
           <span class="loader"></span>
@@ -224,7 +210,7 @@
 
     <script id="post-template" type="x-handlebars-template">
       {% raw %}
-        <img src="{{picture}}" alt="" class="preview__image">
+        <img src="{{image}}" alt="" class="preview__image">
         <div class="preview__details">
           <article class="post">
             <div class="post__text">
