Rewrite loading posts

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,8 +7,8 @@
 @import 'blocks/overlay.scss';
 @import 'blocks/colors.scss';
 @import 'blocks/download.scss';
+@import 'blocks/dropdown.scss';
 @import 'blocks/sizes.scss';
-@import 'blocks/sizes-overlay.scss';
 @import 'blocks/footer.scss';
 @import 'blocks/header.scss';
 @import 'blocks/main.scss';
@@ -16,8 +16,8 @@
 @import 'blocks/option.scss';
 @import 'blocks/pagination.scss';
 @import 'blocks/post.scss';
+@import 'blocks/posts.scss';
 @import 'blocks/preview.scss';
-@import 'blocks/posts-overlay.scss';
 @import 'blocks/share.scss';
 @import 'blocks/top.scss';
-@import 'blocks/loader.scss';
+@import 'blocks/loading.scss';
