--- a/src/styles/blocks/_sizes.scss
+++ b/src/styles/blocks/_sizes.scss
@@ -1,38 +1,49 @@
 .sizes {
-  &__selected {
-    @include clearfix();
-    display: block;
-    background: #f0f0f0;
-    cursor: pointer;
-    transition: trans(background);
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  align-content: flex-start;
+  margin-top: rem(-$tick * 2);
 
-    &:hover {
-      background: #e8e8e8;
-    }
+  &__group {
+    flex-basis: 33%;
+    margin-top: rem($tick * 2);
 
-    i, span {
-      padding: 0 rem(20px);
+    &__heading {
+      @extend %heading;
+      margin: 0;
       line-height: rem($tick * 2);
+
+      i {
+        font-size: rem(24px);
+        margin-right: rem(5px);
+        vertical-align: middle;
+      }
     }
 
-    i {
-      float: right;
-      border-left: rem(1px) solid #fff;
-      font-size: rem(18px);
-      width: rem(18px);
-      text-align: center;
+    label {
+      display: block;
+      cursor: pointer;
+      transition: trans(color);
+
+      &:hover {
+        color: $color--accent;
+      }
     }
 
     span {
-      float: left;
       font-family: $font--mono;
     }
 
     em {
       font-family: $font--sans;
-      color: $color--faint;
-      font-style: normal;
       font-size: $size--minor;
+      font-style: normal;
+      color: $color--faint;
+    }
+
+    input {
+      display: none;
     }
   }
 }
