--- a/src/templates/generator.html
+++ b/src/templates/generator.html
@@ -28,14 +28,9 @@
     </header>
 
     <main class="main">
-      <div class="main__preview">
-        <div class="preview" data-source="media/post.json"></div>
-        <span class="loader"></span>
-        <section class="overlay">
-          <a href="#" class="overlay__close"></a>
-          <span class="loader"></span>
-          <ul class="overlay__body posts-overlay" data-source="media/posts.json"></ul>
-        </section>
+      <div class="main__preview loading">
+        <div class="loading__body preview" data-source="media/post.json"></div>
+        <span class="loading__indicator"></span>
       </div>
 
       <div class="main__options">
@@ -68,124 +63,9 @@
         </section>
         <section class="option">
           <h2 class="option__heading">Screen Size</h2>
-          <div class="sizes">
-            <div class="sizes__selected">
-              <span>1280x800 <em>(detected)</em></span>
-              <i class="fa fa-bars"></i>
-            </div>
-            <section class="overlay">
-              <a href="#" class="overlay__close"></a>
-              <div class="overlay__body overlay__body--scale sizes-overlay">
-                <section class="sizes-overlay__group">
-                  <h3 class="sizes-overlay__group__heading">
-                    <i class="fa fa-mobile-phone"></i>
-                    Smartphone
-                  </h3>
-                  <label>
-                    <input type="radio" name="size" value="1">
-                    <span>1136x640 <em>iPhone 5</em></span>
-                  </label>
-                  <label>
-                    <input type="radio" name="size" value="2">
-                    <span>1334x750 <em>iPhone 6</em></span>
-                  </label>
-                  <label>
-                    <input type="radio" name="size" value="3">
-                    <span>1920x1080 <em>iPhone 6 Plus</em></span>
-                  </label>
-                </section>
-                <section class="sizes-overlay__group">
-                  <h3 class="sizes-overlay__group__heading">
-                    <i class="fa fa-tablet"></i>
-                    Tablet
-                  </h3>
-                  <label>
-                    <input type="radio" name="size" value="4">
-                    <span>1024x768</span>
-                  </label>
-                  <label>
-                    <input type="radio" name="size" value="5">
-                    <span>2048x1536 <em>iPad</em></span>
-                  </label>
-                  <label>
-                    <input type="radio" name="size" value="6">
-                    <span>2732x2048 <em>iPad Pro</em></span>
-                  </label>
-                </section>
-                <section class="sizes-overlay__group">
-                  <h3 class="sizes-overlay__group__heading">
-                    <i class="fa fa-laptop"></i>
-                    Laptop
-                  </h3>
-                  <label>
-                    <input type="radio" name="size" value="7">
-                    <span>1280x800</span>
-                  </label>
-                  <label>
-                    <input type="radio" name="size" value="8">
-                    <span>1280x1024</span>
-                  </label>
-                  <label>
-                    <input type="radio" name="size" value="9">
-                    <span>1366x768</span>
-                  </label>
-                  <label>
-                    <input type="radio" name="size" value="10">
-                    <span>1440x900</span>
-                  </label>
-                  <label>
-                    <input type="radio" name="size" value="11">
-                    <span>2560x1600 <em>rMBP 13&Prime;</em></span>
-                  </label>
-                  <label>
-                    <input type="radio" name="size" value="12">
-                    <span>2880x1800 <em>rMBP 15&Prime;</em></span>
-                  </label>
-                </section>
-                <section class="sizes-overlay__group">
-                  <h3 class="sizes-overlay__group__heading">
-                    <i class="fa fa-desktop"></i>
-                    Desktop 16:9
-                  </h3>
-                  <label>
-                    <input type="radio" name="size" value="13">
-                    <span>1920x1080</span>
-                  </label>
-                </section>
-                <section class="sizes-overlay__group">
-                  <h3 class="sizes-overlay__group__heading">
-                    <i class="fa fa-desktop"></i>
-                    Desktop 16:10
-                  </h3>
-                  <label>
-                    <input type="radio" name="size" value="14">
-                    <span>1920x1200</span>
-                  </label>
-                  <label>
-                    <input type="radio" name="size" value="15">
-                    <span>4096x2304 <em>iMac Retina 21&Prime;</em></span>
-                  </label>
-                  <label>
-                    <input type="radio" name="size" value="16">
-                    <span>5120x2880 <em>iMac Retina 27&Prime;</em></span>
-                  </label>
-                </section>
-                <section class="sizes-overlay__group">
-                  <h3 class="sizes-overlay__group__heading">
-                    <i class="fa fa-desktop"></i>
-                    Desktop 4:3
-                  </h3>
-                  <label>
-                    <input type="radio" name="size" value="17">
-                    <span>1024x768</span>
-                  </label>
-                  <label>
-                    <input type="radio" name="size" value="18">
-                    <span>1600x1200</span>
-                  </label>
-                </section>
-              </div>
-            </section>
+          <div class="dropdown">
+            <span>1280x800 <em>(detected)</em></span>
+            <i class="fa fa-bars"></i>
           </div>
         </section>
         <section class="option option--download">
@@ -208,6 +88,128 @@
       </div>
     </footer>
 
+    <section id="sizes-overlay" class="overlay">
+      <a href="#" class="overlay__close"></a>
+      <div class="overlay__body overlay__body--scale sizes">
+        <section class="sizes__group">
+          <h3 class="sizes__group__heading">
+            <i class="fa fa-mobile-phone"></i>
+            Smartphone
+          </h3>
+          <label>
+            <input type="radio" name="size" value="1">
+            <span>1136x640 <em>iPhone 5</em></span>
+          </label>
+          <label>
+            <input type="radio" name="size" value="2">
+            <span>1334x750 <em>iPhone 6</em></span>
+          </label>
+          <label>
+            <input type="radio" name="size" value="3">
+            <span>1920x1080 <em>iPhone 6 Plus</em></span>
+          </label>
+        </section>
+        <section class="sizes__group">
+          <h3 class="sizes__group__heading">
+            <i class="fa fa-tablet"></i>
+            Tablet
+          </h3>
+          <label>
+            <input type="radio" name="size" value="4">
+            <span>1024x768</span>
+          </label>
+          <label>
+            <input type="radio" name="size" value="5">
+            <span>2048x1536 <em>iPad</em></span>
+          </label>
+          <label>
+            <input type="radio" name="size" value="6">
+            <span>2732x2048 <em>iPad Pro</em></span>
+          </label>
+        </section>
+        <section class="sizes__group">
+          <h3 class="sizes__group__heading">
+            <i class="fa fa-laptop"></i>
+            Laptop
+          </h3>
+          <label>
+            <input type="radio" name="size" value="7">
+            <span>1280x800</span>
+          </label>
+          <label>
+            <input type="radio" name="size" value="8">
+            <span>1280x1024</span>
+          </label>
+          <label>
+            <input type="radio" name="size" value="9">
+            <span>1366x768</span>
+          </label>
+          <label>
+            <input type="radio" name="size" value="10">
+            <span>1440x900</span>
+          </label>
+          <label>
+            <input type="radio" name="size" value="11">
+            <span>2560x1600 <em>rMBP 13&Prime;</em></span>
+          </label>
+          <label>
+            <input type="radio" name="size" value="12">
+            <span>2880x1800 <em>rMBP 15&Prime;</em></span>
+          </label>
+        </section>
+        <section class="sizes__group">
+          <h3 class="sizes__group__heading">
+            <i class="fa fa-desktop"></i>
+            Desktop 16:9
+          </h3>
+          <label>
+            <input type="radio" name="size" value="13">
+            <span>1920x1080</span>
+          </label>
+        </section>
+        <section class="sizes__group">
+          <h3 class="sizes__group__heading">
+            <i class="fa fa-desktop"></i>
+            Desktop 16:10
+          </h3>
+          <label>
+            <input type="radio" name="size" value="14">
+            <span>1920x1200</span>
+          </label>
+          <label>
+            <input type="radio" name="size" value="15">
+            <span>4096x2304 <em>iMac Retina 21&Prime;</em></span>
+          </label>
+          <label>
+            <input type="radio" name="size" value="16">
+            <span>5120x2880 <em>iMac Retina 27&Prime;</em></span>
+          </label>
+        </section>
+        <section class="sizes__group">
+          <h3 class="sizes__group__heading">
+            <i class="fa fa-desktop"></i>
+            Desktop 4:3
+          </h3>
+          <label>
+            <input type="radio" name="size" value="17">
+            <span>1024x768</span>
+          </label>
+          <label>
+            <input type="radio" name="size" value="18">
+            <span>1600x1200</span>
+          </label>
+        </section>
+      </div>
+    </section>
+
+    <section id="posts-overlay" class="overlay loading">
+      <a href="#" class="overlay__close"></a>
+      <div class="overlay__body">
+        <ul class="loading__body posts" data-source="media/posts.json"></ul>
+      </div>
+      <span class="loading__indicator"></span>
+    </section>
+
     <script id="post-template" type="x-handlebars-template">
       {% raw %}
         <img src="{{image}}" alt="" class="preview__image">
@@ -223,6 +225,7 @@
         </div>
       {% endraw %}
     </script>
+
     <script id="posts-template" type="x-handlebars-template">
       {% raw %}
         {{#each posts}}
@@ -234,6 +237,7 @@
         {{/each}}
       {% endraw %}
     </script>
+
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.0/handlebars.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/3.2.0/imagesloaded.pkgd.min.js"></script>
