End of the day commit

--- a/src/styles/blocks/_preview.scss
+++ b/src/styles/blocks/_preview.scss
@@ -3,7 +3,7 @@
   overflow: hidden;
   width: 100%;
   padding-top: 100%;
-  background: #F0F0F0 no-repeat center;
+  background: $color--faint no-repeat center;
   background-size: contain;
 
   &__image {
