--- a/src/templates/generator.html
+++ b/src/templates/generator.html
@@ -13,7 +13,7 @@
   <body>
     <header class="header">
       <div class="header__body">
-        <a href="{BlogURL}" class="header__body__logo">
+        <a href="#" class="header__body__logo">
           <img src="//assets.ubermost.com/images/logo-alt.svg" alt="">
         </a>
         <ul class="header__body__menu">
@@ -29,7 +29,7 @@
 
     <main class="main">
       <div class="main__preview loading">
-        <div class="loading__body preview" data-gateway="media/post.json" data-current-post-id="" data-initial-post-id="1"></div>
+        <div class="loading__body preview" data-gateway="media/post.json" data-initial-post-id="1"></div>
         <span class="loading__indicator"></span>
       </div>
 
