--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,7 +6,7 @@
 @import 'common/extendables.scss';
 @import 'blocks/overlay.scss';
 @import 'blocks/colors.scss';
-@import 'blocks/download.scss';
+@import 'blocks/button.scss';
 @import 'blocks/dropdown.scss';
 @import 'blocks/sizes.scss';
 @import 'blocks/footer.scss';
