--- a/src/styles/setup/_variables.scss
+++ b/src/styles/setup/_variables.scss
@@ -24,5 +24,6 @@ $width--generator : rem($tick * 35);
 $width--left      : ($width--generator / 1.61803398875);
 $width--right     : ($width--generator - $width--left) - rem($tick * 2);
 
-$duration--base : 250ms;
-$duration--ease : 500ms;
+$duration--base    : 150ms;
+$duration--ease    : 300ms;
+$duration--overlay : 250ms;
