--- a/src/templates/generator.html
+++ b/src/templates/generator.html
@@ -216,7 +216,7 @@
         <div class="preview__details">
           <div class="preview__details__body">
             <a href="#" class="button button--change">Change&hellip;</a>
-            <p>or <a href="#">see it on blog</a></p>
+            <p>or <a href="{{blog_link}}">see it on blog</a></p>
           </div>
         </div>
       {% endraw %}
