--- a/src/styles/blocks/_loading.scss
+++ b/src/styles/blocks/_loading.scss
@@ -28,8 +28,18 @@
   }
 
   &__body {
+    position: relative;
     opacity: 0.25;
     transition: trans(opacity, $duration--overlay);
+
+    &::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+    }
   }
 
   &--done &__indicator {
@@ -38,5 +48,9 @@
 
   &--done &__body {
     opacity: 1;
+
+    &::after {
+      display: none;
+    }
   }
 }
