--- a/src/styles/blocks/_posts.scss
+++ b/src/styles/blocks/_posts.scss
@@ -29,7 +29,7 @@
       background: rgba(#000, 0.5);
     }
 
-    &:hover::after {
+    .loading--done &:hover::after {
       opacity: 1;
     }
   }
