Add a lot of shit

--- a/src/styles/blocks/_option.scss
+++ b/src/styles/blocks/_option.scss
@@ -16,7 +16,7 @@
       right: 0;
       left: 0;
       height: rem(1px);
-      background: #eee;
+      background: $color--border;
     }
 
     &::after {
