--- a/src/templates/generator.html
+++ b/src/templates/generator.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ubermost</title>
-    <link rel="shortcut icon" href="//assets.ubermost.com/images/favicon.png">
-    <link href="styles/main.min.css" rel="stylesheet">
+    <title>Ubermost&mdash;Create</title>
+    <link href="//assets.ubermost.com/images/favicon.png" rel="shortcut icon">
+    <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro|Source+Serif+Pro:400,600" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
-    <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+    <link href="styles/main.min.css" rel="stylesheet">
+    <link href="http://feeds.feedburner.com/ubermost" rel="alternate" type="application/rss+xml">
   </head>
   <body>
     <header class="header">
@@ -22,7 +22,7 @@
           <li><a href="http://instagram.com/ubermost">Instagram</a></li>
         </ul>
         <div class="header__body__info">
-          <p>Create inspiring wallpaper from your favourite lettering! You can download it as a wallpaper for your smartphone and PC, or if you're feeling social&mdash;post it on social network of choice to share the wisdom with your friends.</p>
+          <p>Create inspiring wallpaper from your favourite lettering! You can download it as a wallpaper for your smartphone and PC, or if you&apos;re feeling social&mdash;post it on social network of choice to share the wisdom with your friends.</p>
         </div>
       </div>
     </header>
@@ -72,19 +72,43 @@
           <a href="#" class="button button--download">Download wallpaper</a>
           <div class="share">
             <span class="share__label">Or share the wisdom:</span>
-            <a href="#" class="share__link share__link--facebook"><i class="fa fa-facebook"></i></a>
-            <a href="#" class="share__link share__link--pinterest"><i class="fa fa-pinterest-p"></i></a>
-            <a href="#" class="share__link share__link--twitter"><i class="fa fa-twitter"></i></a>
-            <a href="#" class="share__link share__link--tumblr"><i class="fa fa-tumblr"></i></a>
+            <a href="http://www.facebook.com/sharer/sharer.php?u=http://iconosquare.com/p/1089242589679850121_1998556539" class="share__link share__link--facebook">
+              <i class="fa fa-facebook"></i>
+            </a>
+            <a href="http://pinterest.com/pin/create/button/?url=http://iconosquare.com/p/1089242589679850121_1998556539&media=https://scontent.cdninstagram.com/hphotos-xpa1/t51.2885-15/e15/12106281_1692144297685773_1294270895_n.jpg" class="share__link share__link--pinterest">
+              <i class="fa fa-pinterest-p"></i>
+            </a>
+            <a href="http://twitter.com/intent/tweet?source=iconosquare&text=Instagram%20photo%20by%20@klaaaudiiaaaa%20(Klaudia%20Sztejkowska)%20-%20via%20Iconosquare&url=http://iconosquare.com/p/1089242589679850121_1998556539" class="share__link share__link--twitter">
+              <i class="fa fa-twitter"></i>
+            </a>
+            <a href="http://www.tumblr.com/share/photo?source=https%3A%2F%2Fscontent.cdninstagram.com%2Fhphotos-xpa1%2Ft51.2885-15%2Fe15%2F12106281_1692144297685773_1294270895_n.jpg&caption=%23chlejemy+%23zdr%C3%B3wko+%23m%C5%82odych+%23pan+%21+%3A%2A&clickthru=http%3A%2F%2Ficonosquare.com%2Fp%2F1089242589679850121_1998556539" class="share__link share__link--tumblr">
+              <i class="fa fa-tumblr"></i>
+            </a>
           </div>
-        </sectio>
+        </section>
       </div>
     </main>
 
-    <footer class="footer">
-      <div class="footer__body">
-        <p class="footer__body__about">Create inspiring wallpaper from your favourite lettering!</p>
-        <small class="footer__body__copy">Part of the <a href="http://ubermost.com">Ubermost</a>. Built by <a href="http://lamberski.com">Maciej Lamberski</a>.</small>
+    <footer class="footer-alt">
+      <div class="footer-alt__body">
+        <form action="" method="post" class="footer-alt__body__newsletter">
+          <h3>Newsletter</h3>
+          <p>Monthly digest with links to valuable content and ocassional news.</p>
+          <fieldset>
+            <input type="email" name="email" placeholder="Your email address">
+            <button type="submit"><i class="fa fa-envelope"></i></button>
+          </fieldset>
+        </form>
+        <p class="footer-alt__body__links">
+          <a href="http://feeds.feedburner.com/ubermost">RSS</a>
+          &middot;
+          <a href="http://feeds.feedburner.com/ubermost">Facebook</a>
+          &middot;
+          <a href="http://feeds.feedburner.com/ubermost">Instagram</a>
+          &middot;
+          <a href="mailto:hello@ubermost.com">hello@ubermost.com</a>
+        </p>
+        <small class="footer-alt__body__copy">Part of the <a href="http://ubermost.com">Ubermost</a>. Built by <a href="http://lamberski.com">Maciej Lamberski</a>.</small>
       </div>
     </footer>
 
