--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@
 @import 'blocks/dropdown.scss';
 @import 'blocks/sizes.scss';
 @import 'blocks/footer.scss';
+@import 'blocks/footer-alt.scss';
 @import 'blocks/header.scss';
 @import 'blocks/main.scss';
 @import 'blocks/notes.scss';
