--- a/src/styles/setup/_variables.scss
+++ b/src/styles/setup/_variables.scss
@@ -1,8 +1,8 @@
 $breakpoints: (
-  'laptop'  : 'max-width: 1440px',
-  'tablet'  : 'max-width: 1024px',
-  'phablet' : 'max-width: 736px',
-  'phone'   : 'max-width: 636px',
+  'laptop'  : '(max-width: 1440px)',
+  'tablet'  : '(max-width: 1024px)',
+  'phablet' : '(max-width: 736px)',
+  'phone'   : '(max-width: 636px)',
 );
 
 $tick : 30px;
