--- a/src/styles/blocks/_dropdown.scss
+++ b/src/styles/blocks/_dropdown.scss
@@ -16,7 +16,7 @@
 
   i {
     float: right;
-    border-left: rem(1px) solid #fff;
+    border-left: 1px solid #fff;
     font-size: rem(18px);
     width: rem(18px);
     text-align: center;
