--- a/src/styles/blocks/_sizes.scss
+++ b/src/styles/blocks/_sizes.scss
@@ -46,4 +46,16 @@
       display: none;
     }
   }
+
+  @include breakpoint(phablet) {
+    &__group {
+      flex-basis: 50%;
+    }
+  }
+
+  @include breakpoint(mobile) {
+    &__group {
+      flex-basis: 100%;
+    }
+  }
 }
