--- a/src/styles/setup/_variables.scss
+++ b/src/styles/setup/_variables.scss
@@ -1,8 +1,9 @@
 $breakpoints: (
-  'laptop'  : '(max-width: 1440px)',
-  'tablet'  : '(max-width: 1024px)',
-  'phablet' : '(max-width: 736px)',
-  'phone'   : '(max-width: 636px)',
+  'laptop'  : '(max-width: 1439px)',
+  'tablet'  : '(max-width: 1023px)',
+  'phablet' : '(max-width: 735px)',
+  'phone'   : '(max-width: 635px)',
+  'mobile'  : '(max-width: 500px)',
 );
 
 $tick : 30px;
@@ -21,6 +22,7 @@ $font--serif : ('Source Serif Pro', Georgia, serif);
 $font--sans  : ('Source Sans Pro', Arial, sans-serif);
 $font--mono  : (Inconsolata, monospace, sans-serif);
 
+$width--margin    : 5%;
 $width--wrapper   : rem($tick * 20);
 $width--generator : rem($tick * 35);
 $width--left      : ($width--generator / 1.61803398875);
