--- a/src/templates/generator.html
+++ b/src/templates/generator.html
@@ -18,8 +18,18 @@
         </a>
         <ul class="header__body__menu">
           <li><a href="http://ubermost.com">Blog</a></li>
-          <li><a href="http://facebook.com/ubermost">Facebook</a></li>
-          <li><a href="http://instagram.com/ubermost">Instagram</a></li>
+          <li>
+            <a href="http://facebook.com/ubermost">
+              <i class="fa fa-facebook"></i>
+              <span>Facebook</span>
+            </a>
+          </li>
+          <li>
+            <a href="http://instagram.com/ubermost">
+              <i class="fa fa-instagram"></i>
+              <span>Instagram</span>
+            </a>
+          </li>
         </ul>
         <div class="header__body__info">
           <p>Create inspiring wallpaper from your favourite lettering! You can download it as a wallpaper for your smartphone and PC, or if you&apos;re feeling social&mdash;post it on social network of choice to share the wisdom with your friends.</p>
@@ -243,7 +253,7 @@
               <a href="#" class="button button--change">Change&hellip;</a>
             </p>
             <p class="preview__details__body__or">
-              or <a href="{{blog_link}}">see it on blog</a>
+              <span>or</span> <a href="{{blog_link}}">see it on blog</a>
             </p>
           </div>
         </div>
